# partselect

./: .gitignore  README.md  example_rag.py
mcp-server/: pyproject.toml  save_refrigerator_template.py  scrape_all_symptoms.py  scrape_refrigerator_noisy.py  scrape_refrigerator_repairs.py  server.py  test_scraper.py
mcp-server/data/: scraped_parts.json
mcp-server/data/dishwasher/: dishwasher_repair_guides.json
mcp-server/data/dishwasher/dishwasher_symptoms/: dishwasher_door_latch_failure_detail.json  dishwasher_leaking_detail.json  dishwasher_noisy_detail.json  dishwasher_not_cleaning_dishes_properly_detail.json  dishwasher_not_draining_detail.json  dishwasher_not_drying_dishes_properly_detail.json  dishwasher_will_not_dispense_detergent_detail.json  dishwasher_will_not_fill_with_water_detail.json  dishwasher_will_not_start_detail.json  scraping_summary.json
mcp-server/data/refrigerator/: refrigerator_repair_guides.json
mcp-server/data/refrigerator/refrigerator_symptoms/: refrigerator_door_sweating_detail.json  refrigerator_freezer_too_cold_detail.json  refrigerator_fridge_and_freezer_are_too_warm_detail.json  refrigerator_fridge_runs_too_long_detail.json  refrigerator_fridge_too_cold_detail.json  refrigerator_fridge_too_warm_detail.json  (+6 more)
mcp-server/documentation/: progress.md  scraping_documentation.md
mcp-server/template/: PS11752778_summary.txt  PS11752778_template.html  dishwasher_noisy_template.html  dishwasher_repair_template.html
mcp-server/utils/: __init__.py  constants.py  helpers.py  rag_system.py  scraper.py  simple_search.py
(+6 files in other folders)
