[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastmcp>=2.12.3",
    "mcp[cli]>=1.15.0",
    "selenium>=4.15.0",
    "sentence-transformers>=5.1.1",
    "webdriver-manager>=4.0.2",
]
